--- a/phylogene_app/templates/genomics/CGView.html
+++ b/phylogene_app/templates/genomics/CGView.html
@@ -52,8 +52,8 @@
     }
 
     cgv = new CGV.Viewer('#my-viewer', {
-      height: 500,
-      width: 500,
+      height: 1000,
+      width: 1000,
     });
 {% comment %}    "features": [
             {
@@ -88,7 +88,7 @@
       {% comment %}positions: [50, 200, 400, 500, 600, 800],
       scores: [0.4, 0.75, 0.25, 0.5, 0.6, 0.1],
       baseline: 0.5,{% endcomment %}
-      source: 'genome_01',
+      source: test[5][0],
       {% comment %}legendPositive: new CGV.LegendItem(cgv.legend, {swatchColor: 'blue', name: 'Plot +'}),
       legendNegative: new CGV.LegendItem(cgv.legend, {swatchColor: 'red', name: 'Plot -'})
 {% endcomment %}
@@ -101,7 +101,7 @@
       position: 'both',
       dataType: 'feature',
       dataMethod: 'source',
-      dataKeys: 'genome_01'
+      dataKeys: test[5][0]
     });
 
 
@@ -110,7 +110,7 @@
       position: 'inside',
       dataType: 'plot',
       dataMethod: 'source',
-      dataKeys: 'genome_01'
+      dataKeys: test[5][0]
     });
 {% comment %}
     cgv.addFeatures(data)
